fix: double scroll, lorem ipsum text, responsive fixes
Agent-Logs-Url: https://github.com/sale-sify/Chop-chop/sessions/1d945e10-4ae3-4b6b-a75e-28c2c57c5805

--- a/style.css
+++ b/style.css
@@ -184,8 +184,7 @@
 
 
 .acceuil {
-    height: fit-content;
-    max-height: 100vh;
+    height: auto;
     width: auto;
     padding: 2%;
     font-family: "Montserrat", sans-serif;
@@ -278,7 +277,7 @@
 
 
 .carte {
-    height: 100vh;
+    height: auto;
     width: auto;
     padding: 2%;
     font-family: "Montserrat", sans-serif;
@@ -372,7 +371,7 @@
 
 
 .boissons {
-    height: 100vh;
+    height: auto;
     width: auto;
     padding: 2%;
     font-family: "Montserrat", sans-serif;
@@ -441,7 +440,7 @@
 
 
 .infos {
-    height: 120vh;
+    height: auto;
     background: rgb(235, 203, 161);
     width: auto;
     padding: 2%;
@@ -455,9 +454,7 @@
 
 
 .section-title > h2 {
-    padding: 30%;
-    padding-bottom: 80%;
-    margin-left: 80%;
+    padding: 3%;
     font-family: "Rubik Mono One", monospace;
     font-weight: 400;
     font-style: normal;
@@ -739,7 +736,7 @@ img, iframe {
     .introduction,
     .philosophie {
         width: 90%;
-        padding-right: 32px;
+        padding-right: 0;
         font-size: 16px;
         line-height: 28px;
     }
@@ -748,7 +745,7 @@ img, iframe {
     .container-line2 > img {
         width: 80%;
         max-width: 520px;
-        margin-right: 32px;
+        margin-right: 0;
     }
 
 
@@ -776,7 +773,7 @@ img, iframe {
     .caroussel {
         height: auto;
         padding: 12px;
-        margin-left: -30px;
+        margin-left: 0;
     }
 
     .img-container {
@@ -814,7 +811,7 @@ img, iframe {
 
     .cote-boisson {
         width: 85%;
-        padding-right: 32px;
+        padding-right: 0;
         font-size: 16px;
         line-height: 28px;
     }
@@ -829,7 +826,7 @@ img, iframe {
 
     /* INFOS */
     .infos {
-        width: 95%;
+        width: 100%;
         height: auto;
         padding: 20px 14px;
         flex-direction: column;
@@ -876,8 +873,6 @@ img, iframe {
         margin: 0 auto;
         margin-top: 30px;
         margin-bottom: 5rem;
-        margin-right: 40px;
-        
     }
 
     .liens-utiles > a {
@@ -891,7 +886,7 @@ img, iframe {
     .map-container {
         height: 260px;
         margin-top: 22px;
-        margin-right: 52px;
+        margin-right: 0;
     }
 }
 
